# Defend-AI-Tech-Inc_agent-discover-scanner

./: CHANGELOG.md  CONTRIBUTING.md  README.md  RELEASE_NOTES.md  ROADMAP.md  pyproject.toml
.github/workflows/: aibom.yml
docs/: nist-mapping.md
src/agent_discover_scanner/: cli.py  git_scanner.py  known_apps.py  macos_detector.py  network_monitor.py  scan_runner.py  windows_detector.py
tests/: test_git_scanner.py
