[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agent-discover-scanner"
version = "2.6.0"
description = "Discover and inventory autonomous AI agents across your infrastructure - static analysis, runtime detection, and Kubernetes monitoring"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Mohamed Waseem", email = "mwaseem@defendai.tech"}
]
maintainers = [
    {name = "DefendAI", email = "support@defendai.ai"}
]
keywords = [
    "ai", "agents", "security", "static-analysis", "kubernetes", "llm",
    "shadow-ai", "ai-security", "agent-discovery", "ebpf",
    "ai-agent-security", "mcp-security", "llm-security", "ghost-detection",
    "ai-governance", "cyclonedx", "aibom", "mcp", "agent-scanner",
    "shadow-ai-detection", "ai-inventory",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "Intended Audience :: System Administrators",
    "Topic :: Security",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: System :: Monitoring",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
]

dependencies = [
    "typer>=0.9.0",
    "rich>=13.0.0",
    "pydantic>=2.0.0",
    "sarif-om>=1.0.4",
    "esprima>=4.0.1",
    "psutil>=5.9.0",
    "kubernetes>=28.1.0",
    "httpx>=0.27.0",
    "certifi>=2024.2.2",
]

# --platform flag (known-apps fetch): uses defendai-sdk when available, else urllib.
# To use the SDK (tenant token, etc.): pip install -e /path/to/defendai-sdk
# When defendai-sdk is on PyPI, add optional-dependencies platform = ["defendai-sdk>=0.2.0"]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.1.0",
]

[project.scripts]
agent-discover-scanner = "agent_discover_scanner.cli:app"
agent-discover = "agent_discover_scanner.cli:app"

[project.urls]
Homepage = "https://defendai.ai"
Documentation = "https://github.com/Defend-AI-Tech-Inc/agent-discover-scanner/blob/main/README.md"
Repository = "https://github.com/Defend-AI-Tech-Inc/agent-discover-scanner"
Issues = "https://github.com/Defend-AI-Tech-Inc/agent-discover-scanner/issues"
Changelog = "https://github.com/Defend-AI-Tech-Inc/agent-discover-scanner/blob/main/CHANGELOG.md"

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = []

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --cov=agent_discover_scanner --cov-report=term-missing"
